--- a/jose.css
+++ b/jose.css
@@ -1,3 +1,12 @@
 .form-actions .tip {
   display: none !important;
 }
+
+.jose-vs-oss {
+  clear: both;
+}
+
+.jose-vs-oss .button {
+  float: inherit !important;
+  margin-left: -1px !important;
+}
